--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -17,3 +17,61 @@
     margin: auto;
 
 }
+.card{
+    background-color: rgb(40, 40, 40);
+}
+.current_series{
+    bottom: -20px;
+}
+
+
+footer{
+    color: white;
+    .pre_footer{
+        
+        img{
+            width: 50px;
+            max-height: 64px;
+            
+        }
+    }
+    h5{
+        
+        font-size: 0.75rem;
+    }
+    ul{
+        list-style: none;
+        padding-left: 0;
+       li{
+        font-size: 0.75rem;
+        
+       } 
+    }
+    .footer_top{
+        
+        .col-8{
+            z-index: 100;
+            
+            background-repeat: no-repeat;
+            background-position: 120px ;
+
+        }
+        .dc_logo_bg{
+            width: 70%;
+            height: 70%;
+        }
+    }
+    .footer_bottom{
+        width: 100%;
+        margin-top: 15px;
+        padding: 3rem 0;
+        
+        li{
+            padding: 0 0.5rem;
+        }
+        h5{
+            font-size: 1rem;
+           
+        }
+    }
+}
